Make PageUp/PageDown work in Dolphin's new view engine

BUG: 288748
FIXED-IN: 4.8.0
REVIEW: 103721